added githubactions icon

--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -67,7 +67,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="tech-link" data-target="github-actions">GitHub Actions</a>
+                            <a href="#" class="tech-link" data-target="github-actions" title="GitHub Actions">
+                                <img src="{{ url_for('static', filename='images/tech/GitHubActions.png') }}" alt="GitHub Actions Logo" class="tech-icon">
+                            </a>
                         </li>
                     </ul>
                 </li>
