--- a/app/templates/snippets/Dockerfile.html
+++ b/app/templates/snippets/Dockerfile.html
@@ -1,7 +1,13 @@
-<h3>Dockerfile</h3>
-<pre><code>FROM python:3.8-slim-buster
+FROM python:3.9-slim
+
 WORKDIR /app
-COPY . /app
-RUN pip install -r requirements.txt
-EXPOSE 80
-CMD ["python", "app.py"]</code></pre>
+
+COPY app/requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY app/ .
+
+EXPOSE 5000
+
+CMD ["python", "app.py"]
