--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
             <a href="/tech-in-action">Tech Stack</a>
             <a href="/my-projects">My Projects</a>
             <a href="/education">Education</a>
+            <a href="/contact">Contact</a>
         </div>
         <div class="nav-icon-links">
             <a href="{{ url_for('static', filename='files/LiorMilligerCV.pdf') }}" download class="nav-button">CV</a>
