--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,7 @@
     <footer>
         <p>&copy; 2025 Lior Milliger. All Rights Reserved.</p>
     </footer>
-
+    
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
